--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventory Management System</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
 </head>
 <body class="d-flex flex-column min-vh-100 {% block body_class %}{% endblock %}">
@@ -15,21 +16,37 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                {% if current_user.is_authenticated %}
-                <li class="nav-item {% if request.endpoint == 'main.home' %}active{% endif %}">
-                    <a class="nav-link" href="{{ url_for('main.home') }}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
-                </li>
-                {% else %}
-                <li class="nav-item {% if request.endpoint == 'auth.login' %}active{% endif %}">
-                    <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
-                </li>
+    <ul class="navbar-nav ml-auto">
+        {% if current_user.is_authenticated %}
+        <li class="nav-item {% if request.endpoint == 'main.home' %}active{% endif %}">
+            <a class="nav-link" href="{{ url_for('main.home') }}">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+        </li>
+        {% else %}
+        <li class="nav-item {% if request.endpoint == 'auth.login' %}active{% endif %}">
+            <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
+        </li>
+        {% endif %}
+    </ul>
+
+    {% if current_user.is_authenticated %}
+    <!-- Notification Bell -->
+    <ul class="navbar-nav">
+        <li class="nav-item position-relative">
+            <a class="nav-link" href="{{ url_for('main.notifications') }}">
+                <i class="fas fa-bell"></i>
+                {% if expiring_assets_count > 0 %}
+                <span class="badge badge-danger position-absolute" style="top: 2px; right: 0px;">
+                    {{ expiring_assets_count }}
+                </span>
                 {% endif %}
-            </ul>
-        </div>
+            </a>
+        </li>
+    </ul>
+    {% endif %}
+</div>
     </nav>
 
     <div class="mt-4 flex-grow-1">
