--- a/app/templates/add_item.html
+++ b/app/templates/add_item.html
@@ -9,10 +9,10 @@
     <form method="POST" action="{{ url_for('main.add_item') }}" class="mt-3">
         {{ form.hidden_tag() }}
 
-        <div class="form-group">
+        <!-- <div class="form-group">
             {{ form.asset_tag.label(class="form-label") }}
             {{ form.asset_tag(class_="form-control") }}
-        </div>
+        </div> -->
         
         <div class="form-group">
             {{ form.asset_type.label(class="form-label") }}
