Task 4 - + purchse amount section

--- a/app/templates/edit_item.html
+++ b/app/templates/edit_item.html
@@ -99,6 +99,9 @@
         <label for="purchase_date">Purchase Date</label>
         {{ form.purchase_date(class_="form-control") }}
 
+        <label for="purchase_amount">Purchase Amount (In USD)</label>
+        {{ form.purchase_amount(class_="form-control") }}
+
         <label for="age">Age</label>
         {{ form.age(class_="form-control") }}
 
