--- a/app/templates/add_item.html
+++ b/app/templates/add_item.html
@@ -55,9 +55,16 @@
         </div>
 
         <div class="form-group">
+    {{ form.purchase_amount.label(class="form-label") }}
+    {{ form.purchase_amount(class="form-control") }}
+</div>
+
+
+        <div class="form-group">
             {{ form.age.label(class="form-label") }}
             {{ form.age(class_="form-control") }}
         </div>
+
 
         <div class="form-group">
             {{ form.current_owner.label(class="form-label") }}
