--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="my-4">
+<div class="container my-4">
     <h1 class="mb-4">Assets</h1>
     <p>Welcome, <strong>{{ current_user.username }}</strong>!</p>
 
